# users_service

./: .gitignore  Cargo.toml  README.md  tarpaulin-report.html
.github/workflows/: rust.yml
src/: lib.rs  main.rs  routes.rs
src/api/: state.rs
src/api/handlers/: user_handlers.rs
src/domain/: mod.rs
src/domain/email/: model.rs  service.rs
src/domain/user/: mod.rs  model.rs  repository.rs
src/handlers/: email_handlers.rs  mod.rs  owner_handlers.rs  user_handlers.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs  mongo_context.rs
src/infrastructure/mongodb/: user_repository.rs
src/infrastructure/smtp/: email_service.rs
src/models/: email.rs  mod.rs  owner.rs  pet.rs  qr_code.rs
src/repo/: database.rs  database_repository.rs  email_repo.rs  email_repository.rs  mod.rs  owner_repo.rs
src/repo/traits/: email_trait.rs  mod.rs  owner_trait.rs
src/services/: email.rs
src/utils/: auth.rs  config.rs  errors.rs  jwt.rs  mod.rs
src/utils/security/: auth.rs  jwt.rs  mod.rs
