[package]
name = "pets"
version = "0.1.0"
edition = "2024"

[dependencies]
qrcode = "0.14.1"
image = "0.25.6"
thiserror = "2.0.12"
mongodb = { version = "3.2.4", features = ["sync"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.7"
dotenv = "0.15"
futures = "0.3"
actix-web = "4.0"
actix-service = "2.0"
actix-rt = "2.0"
async-trait = "0.1.50"
env_logger = "0.11.8"
log = "0.4"
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"]}
rand = "0.9.2"