[package]
name = "users_service"
version = "0.1.0"
edition = "2024"

[dependencies]
qrcode = "0.14.1"
image = "0.25.6"
thiserror = "2.0.16"
mongodb = { version = "3.2.5", features = ["sync"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
dotenv = "0.15"
futures = "0.3"
actix-web = "4.0"
actix-service = "2.0"
actix-rt = "2.11.0"
async-trait = "0.1.89"
env_logger = "0.11.8"
log = "0.4"
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"]}
rand = "0.9.2"
aes-gcm = "0.10"
cargo-llvm-cov = "0.6.18"
regex = "1.11.2"
hex = "0.4.3"
bcrypt = "0.17.1"
tokio-test = "0.4"
mockall = "0.13"
serial_test = "3.2.0"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13.0", features = ["mongo"] }